mdmCeneveo/src/objects/Estimate_Request__c.object
<CustomObject>
    <fields>
        <fullName>Foil_Stamp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foil Stamp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Cost_Per_Case__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter the freight cost per case</inlineHelpText>
        <label>Freight Cost Per Case</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Inv_1_Price__c</fullName>
        <label>Freight Inv 1 Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Inv_1__c</fullName>
        <label>Freight Inv 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Inv_2_Price__c</fullName>
        <label>Freight Inv 2 Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Inv_2__c</fullName>
        <label>Freight Inv 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Inv_3_Price__c</fullName>
        <label>Freight Inv 3 Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Inv_3__c</fullName>
        <label>Freight Inv 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Percentage__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter the Freight Percentage to use to calculate total price</inlineHelpText>
        <label>Freight Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Freight_Total__c</fullName>
        <formula>Freight_Inv_1_Price__c +  Freight_Inv_2_Price__c +  Freight_Inv_3_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_additional_to__c</fullName>
        <label>Freight</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Delivery included</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB Destination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frieght_Pricing__c</fullName>
        <inlineHelpText>Select the appropriate freight pricing method.</inlineHelpText>
        <label>Freight Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>FOB Plant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Destination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Furnished__c</fullName>
        <label>Pre Press Furnished</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic file with all elements in place, CG to rip and trap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cenveo to rip and trap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi Resolution PDF ready to Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing files for Exact reprint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gap_Between_Labels__c</fullName>
        <defaultValue>0.1250</defaultValue>
        <label>Gap Between Labels</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INV_Order_QTY__c</fullName>
        <formula>IF( Order_QTY_1__c  = TRUE, Qty_1__c , IF( Order_QTY_2__c  = TRUE, Qty_2__c, IF( Order_QTY_3__c  = TRUE, Qty_3__c, IF( Order_QTY_4__c  = TRUE, Qty_4__c, IF( Order_QTY_5__c  = TRUE, Qty_5__c, NULL )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INV Order QTY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INV_Order_Sell__c</fullName>
        <formula>IF( Order_QTY_1__c = TRUE, CP_Sell_Price_QTY_1__c, IF( Order_QTY_2__c = TRUE, CP_Sell_Price_QTY_2__c , IF( Order_QTY_3__c = TRUE, CP_Sell_Price_QTY_3__c, IF( Order_QTY_4__c = TRUE, CP_Sell_Price_QTY_4__c, IF( Order_QTY_5__c = TRUE, CP_Sell_Price_QTY_5__c, NULL)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INV Order Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Home_NO_EARLIER_than__c</fullName>
        <label>In Home NO EARLIER than:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Home_NO_LATER_than__c</fullName>
        <label>In Home NO LATER than:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Home_Range_Max__c</fullName>
        <label>In Home Range Max</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Home_Range__c</fullName>
        <label>In Home Range Min</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Home__c</fullName>
        <label>In  Home</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ink_2__c</fullName>
        <label>Ink 2</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ink_3__c</fullName>
        <label>Ink 3</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ink_4__c</fullName>
        <label>Ink 4</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ink__c</fullName>
        <label>Ink</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Print_Coating_Type__c</fullName>
        <label>Inside Print - Coating Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_Print_Ink_Type__c</fullName>
        <label>Inside Print - Ink Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metallic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_Print__c</fullName>
        <label>Inside Print</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - 1 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 2 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 3 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 4 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 5 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 6 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 7 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 8 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 9 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 10 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>Enter any additional internal comments for the Estimators</inlineHelpText>
        <label>Internal Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Perforations__c</fullName>
        <label>Internal Perforations</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_10_Price__c</fullName>
        <label>Inv 10 Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inv_1_Price__c</fullName>
        <label>Inv 1 Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inv_2_Price__c</fullName>
        <label>Inv 2 Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inv_Desc_10__c</fullName>
        <label>Inv Desc 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Desc_1__c</fullName>
        <label>Inv Desc 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv_Desc_2__c</fullName>
        <label>Inv Desc 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <formula>Sub_Total__c +  Freight_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>Number of Item</description>
        <inlineHelpText>Enter the Item to be estimated.</inlineHelpText>
        <label>Item Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <label>Job Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Paper_Certification__c</fullName>
        <label>Job/Paper Certification</label>
        <picklist>
            <picklistValues>
                <fullName>None/Blank</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEFC &amp; SFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exact Rerun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rerun with Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDC__c</fullName>
        <label>LDC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Label_Category__c</fullName>
        <label>Label Category</label>
        <picklist>
            <picklistValues>
                <fullName>TE Band</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrap Around</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promo Combo Pk.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-N-Shrink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body w/TE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Label_Product_Type__c</fullName>
        <label>Label Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cut Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mylar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poly Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Gloss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Label_Roll_Footage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Label Roll Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label_Shape__c</fullName>
        <inlineHelpText>Select Shape Type</inlineHelpText>
        <label>Label Shape</label>
        <picklist>
            <picklistValues>
                <fullName>RCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Circle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Square</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butt Cutt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Label_Type__c</fullName>
        <label>Label Type</label>
        <picklist>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fanfold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheeted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Labels_Per_Case__c</fullName>
        <formula>Labels_Per_Roll_Fold__c  *  Rolls_Stacks_Per_Case__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labels Per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labels_Per_Fold__c</fullName>
        <inlineHelpText>Fanfold Product - Enter the number of Labels Per Fold</inlineHelpText>
        <label>Labels Per Fold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labels_Per_Roll_Fold__c</fullName>
        <label>Labels Per Roll/Stack</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lay_Flat__c</fullName>
        <label>Lay Flat</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Time_in_Days__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>Enter the number of days for the expected lead time for product to be manufactured</inlineHelpText>
        <label>Lead Time (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Bond_Paper__c</fullName>
        <label>Length of Bond Paper</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_Label_Stock__c</fullName>
        <inlineHelpText>Enter the length of label stock to the glue line</inlineHelpText>
        <label>Length of Label Stock</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loose_Color__c</fullName>
        <label>Loose Color</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loose_Proofs_Back__c</fullName>
        <label>Loose Proofs Back</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loose_Proofs_Out__c</fullName>
        <label>Loose Proofs Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loose_Review__c</fullName>
        <label>Loose Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <label>Machine Model</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_OEM__c</fullName>
        <label>Machine OEM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Files__c</fullName>
        <label>Mail Files</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <label>Mail</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Addressing_Formatting__c</fullName>
        <formula>IF(INCLUDES( Mailing_Addressing__c,&quot;Ink jet address / 1 inch Prt Head&quot;), &quot;Ink jet address / 1 inch Prt Head, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Multi-head ink jet / 4 inch Prt Head&quot;), &quot;Multi-head ink jet / 4 inch Prt Head, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Apply indica with ink jet&quot;), &quot;Apply indica with ink jet, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Ink jet message lines&quot;), &quot;Ink jet message lines, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Piece will be glued closed in bindery&quot;), &quot;Piece will be glued closed in bindery, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Tabbing - 1 tab&quot;), &quot;Tabbing - 1 tab, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Tabbing - 2 tabs&quot;), &quot;Tabbing - 2 tabs, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Tabbing - 3 tabs&quot;), &quot;Tabbing - 3 tabs, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;Slim Jim format - 3 tabs x 1.5inch&quot;), &quot;Slim Jim format - 3 tabs x 1.5inch &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Addressing__c,&quot;White tabs&quot;), &quot;White tabs&quot;,NULL)+&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Addressing Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Addressing__c</fullName>
        <label>Mailing Addressing</label>
        <picklist>
            <picklistValues>
                <fullName>Ink jet address / 1 inch Prt Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-head ink jet / 4 inch Prt Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apply indica with ink jet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ink jet message lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piece will be glued closed in bindery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabbing - 1 tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabbing - 2 tabs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabbing - 3 tabs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slim Jim format - 3 tabs x 1.5inch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White tabs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Data_Formatting__c</fullName>
        <formula>IF(INCLUDES(Mailing_Data__c,&quot;Base Data Service&quot;), &quot;Base Data Service, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Data__c,&quot;NCOA&quot;), &quot;NCOA, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Data__c,&quot;Merge / Perge&quot;), &quot;Merge / Perge, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Data__c,&quot;Tracking / Plant Code&quot;), &quot;Tracking / Plant Code&quot;,NULL)+&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Data Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Data__c</fullName>
        <label>Mailing Data</label>
        <picklist>
            <picklistValues>
                <fullName>Base Data Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merge / Perge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracking / Plant Code</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Finishing_Formatting__c</fullName>
        <formula>IF(INCLUDES( Mailing_Finishing__c ,&quot;Laser 1/0 Black Simplex&quot;), &quot;Laser 1/0 Black Simplex, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Laser 1/1 Black Duplex&quot;), &quot;Laser 1/1 Black Duplex, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Sheet Size Length (Inches)&quot;), &quot;Sheet Size Length (Inches), &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Sheet Size Height (Inches)&quot;), &quot;Sheet Size Height (Inches), &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Overprint on litho shell&quot;), &quot;Overprint on litho shell, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;PDF soft proof&quot;), &quot;PDF soft proof, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;White paper proof&quot;), &quot;White paper proof, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Hard copy proof&quot;), &quot;Hard copy proof&quot;,NULL)+&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Finishing Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Finishing__c</fullName>
        <label>Mailing Finishing</label>
        <picklist>
            <picklistValues>
                <fullName>Laser 1/0 Black Simplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser 1/1 Black Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheet Size Length (Inches)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheet Size Height (Inches)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overprint on litho shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF soft proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White paper proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard copy proof</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Handling_Formatting__c</fullName>
        <formula>IF(INCLUDES( Mailing_Handling__c ,&quot;Permit Imprint&quot;), &quot;Permit Imprint, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Live / Pre-Cancelled Stamps&quot;), &quot;Live / Pre-Cancelled Stamps, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Standard Mail&quot;), &quot;Standard Mail, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Nonprofit Standard Mail&quot;), &quot;Nonprofit Standard Mail, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;First Class Mail&quot;), &quot;First Class Mail, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Bound Printed Matter&quot;), &quot;Bound Printed Matter, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Periodicals&quot;), &quot;Periodicals, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Job does not mail&quot;), &quot;Job does not mail&quot;,NULL)+&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Handling Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Handling__c</fullName>
        <label>Mailing Handling</label>
        <picklist>
            <picklistValues>
                <fullName>Permit Imprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live / Pre-Cancelled Stamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofit Standard Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Class Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bound Printed Matter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job does not mail</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Inserting__c</fullName>
        <label>Mailing Inserting</label>
        <picklist>
            <picklistValues>
                <fullName>Envelope size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName># Inserts per package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert into booklet envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert into catalog envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nest into another piece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polybag / Polywrap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrinkwrap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match 1 insert to address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match 2 insert to address</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Insertion_Formatting__c</fullName>
        <formula>IF(INCLUDES(Mailing_Inserting__c ,&quot;Envelope size&quot;), &quot;Envelope size, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;# Inserts per package&quot;), &quot;# Inserts per package, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Insert into booklet envelope&quot;), &quot;Insert into booklet envelope, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Insert into catalog envelope&quot;), &quot;Insert into catalog envelope, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Nest into another piece&quot;), &quot;Nest into another piece, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Polybag / Polywrap&quot;), &quot;Polybag / Polywrap, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Shrinkwrap&quot;), &quot;Shrinkwrap, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Match 1 insert to address&quot;), &quot;Match 1 insert to address, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Inserting__c ,&quot;Match 2 insert to address&quot;), &quot;Match 2 insert to address, &quot;,NULL)+&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Inserting Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Approval__c</fullName>
        <label>Manufacturing Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejceted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Estimates</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin_All_Quanitites__c</fullName>
        <inlineHelpText>Enter the margin percent in this area if the same margin will apply to all quoted quantities.</inlineHelpText>
        <label>Margin - All Quanitites</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_CP_All__c</fullName>
        <description>This is to apply a set % to all QTY&apos;s for Commercial Print Estimating</description>
        <inlineHelpText>A value entered in this field will apply to all QTY&apos;s/Costs to determine the sell price for each QTY.</inlineHelpText>
        <label>Margin CP-All</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Estimation_1__c</fullName>
        <formula>IF ( Inventory__c,
     (
      (Sales_Price_Estimation_1__c -(
                                   ( Cost_1__c )+ 
                                   (Cost_1__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) + 
                                   (Cost_1__c * 0.01)
                                 )
        ) /
                                   ( Sales_Price_Estimation_1__c - 
                                                                 (Cost_1__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )- 
                                                                 (Cost_1__c * 0.01)
                                                                 
                                    )
      ),
    (
      (Sales_Price_Estimation_1__c -(
                                   ( Cost_1__c )+ 
                                   (Cost_1__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) 
                                   
                                 )
        ) /
                                   ( Sales_Price_Estimation_1__c - 
                                                                 (Cost_1__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )
                                                                 
                                                                 
                                    )
      ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Estimation 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>